Updated Material Tool doc.

--- a/SurfaceGroup/MaterialTool.html
+++ b/SurfaceGroup/MaterialTool.html
@@ -178,8 +178,8 @@
 <li>Press <code class="docutils literal"><span class="pre">Alt</span> <span class="pre">+</span> <span class="pre">n</span></code> shorcut or Click on <code class="docutils literal"><span class="pre">Alt</span> <span class="pre">+</span> <span class="pre">n</span></code> or <code class="docutils literal"><span class="pre">A</span></code> button in the slot. It&#8217;ll assign the material in the slot to the selected polygons.</li>
 <li>Click <code class="docutils literal"><span class="pre">LMB</span></code> holding <code class="docutils literal"><span class="pre">SHIFT</span></code> over a polygon to which you want to assign the current material.</li>
 </ol>
-<div class="admonition important">
-<p class="first admonition-title">Important</p>
+<div class="admonition tip">
+<p class="first admonition-title">Tip</p>
 <p class="last"><code class="docutils literal"><span class="pre">Alt</span> <span class="pre">+</span> <span class="pre">0</span></code> ~ <code class="docutils literal"><span class="pre">Alt</span> <span class="pre">+</span> <span class="pre">9</span></code> shortcuts work in other tools as well so you don&#8217;t need to enter Material tool if you use <code class="docutils literal"><span class="pre">Alt</span> <span class="pre">+</span> <span class="pre">n</span></code> shortcuts to assign a material.</p>
 </div>
 </div>
