Updated Settings page.

--- a/settings.html
+++ b/settings.html
@@ -210,6 +210,8 @@
 <dd>Most used grid sizes</dd>
 <dt>Grid Size</dt>
 <dd>Custom grid size</dd>
+<dt>X,Y and Z</dt>
+<dd>Allows the grid snap along each X, Y, Z axis</dd>
 <dt>Rotation Snap Size</dt>
 <dd>Most used rotation snap sizes</dd>
 </dl>
