Updated the release note

--- a/releasenotes_UModeler_2020.html
+++ b/releasenotes_UModeler_2020.html
@@ -182,6 +182,7 @@
 <li>Fix : Fixed an issue where duplicated UModeler objects shared meshes</li>
 <li>Fix : Fixed a material issue where new assigned  materials of UModeler prefab objects returned to the default ones.</li>
 <li>Fix : Fixed a bug where UModeler mesh disappeared when it is selected after Lightmap Static in Local Settings is toggled on/off  with multiple selected UModeler objects.</li>
+<li>Fix : Fixed an issue where X axis corresponded with Depth param and Y axis corresponded with Width param in Rectangle, Box, Room and Stair tools.</li>
 <li>Enhancement : Exposed an icon for UModelerizing on the toolbar in the scene view only when non-umodeler objects with mesh filters are selected.</li>
 <li>Enhancement : Added UModelerlize item to the GameObject menu and the popup menu in the hierarchy window.</li>
 </ul>
