Select only visible gif  has been added

--- a/ElementGroup.html
+++ b/ElementGroup.html
@@ -214,6 +214,11 @@ Using the Polygon tool, polygons can be selected and moved/rotated/scaled.</p>
 <dl class="simple" id="selectonlyvisibleintransform">
 <dt>Select Only Visible</dt><dd><p>If on, Selects only visible vertices/edges/polygons from a camera. Occluded elements from other polygons will not be selected. This is available only when the game object has MeshCollider component.</p>
 </dd>
+</dl>
+<div class="figure align-default">
+<img alt="_images/UModeler_ImprovedSelectOnlyVisibleFlag.gif" src="_images/UModeler_ImprovedSelectOnlyVisibleFlag.gif" />
+</div>
+<dl class="simple">
 <dt>Distance</dt><dd><p>How distant the selected elements move. This is only available as translation gizmo is enabled.</p>
 </dd>
 <dt>Snap To Polygon</dt><dd><p>An edge is snapped to a close polygon within a specific distance. This is only available as the edge is being translated.</p>
