--- a/releasenotes_UModeler_2020.html
+++ b/releasenotes_UModeler_2020.html
@@ -212,6 +212,7 @@
 <li><p>Fix : Fixed a bug where the selected polygons are gone when selecting a UModeler object after exiting UV tool by deselecting all.</p></li>
 <li><p>Fix : Fixed a duplicated UModeler object issue where the original mesh and the duplicated mesh are coupled.</p></li>
 <li><p>Fix : Fixed a polygon color tool issue where polygon selection by a color didn’t work.</p></li>
+<li><p>Fix : Fixed a bug where the selected polygons disappear when re-entering UModeler editor mode just after exiting from UV tool by clicking on an empty space in Hierarchy window.</p></li>
 </ul>
 </div>
 <div class="section" id="version-2-7-12-may-12-2020">
