--- a/releasenotes_UModeler_2020.html
+++ b/releasenotes_UModeler_2020.html
@@ -210,7 +210,7 @@
 <ul class="simple">
 <li><p>Fixed UV param reset bug where primitive shapes are created on a polygon.</p></li>
 <li><p>Fixed a bug where icon size gets bigger when Archimatix is installed in the project.</p></li>
-<li><p>Fixed b bug where a polygon which is being transfomed with the move gizmo by dragging jumps when the cursor gets out of the scene view.</p></li>
+<li><p>Fixed a bug where a polygon which is being transformed with the move gizmo by dragging jumps when the cursor gets out of the scene view.</p></li>
 <li><p>Made the current menu type(Icon or Text based menu) maintained even after unity is restarted.</p></li>
 </ul>
 </div>
