Updated the asset store link

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 <div class="figure align-default">
 <a class="reference internal image-reference" href="_images/Releasenote2020.png"><img alt="_images/Releasenote2020.png" src="_images/Releasenote2020.png" style="width: 660.0px; height: 346.5px;" /></a>
 </div>
-<a href="https://www.assetstore.unity3d.com/#!/content/80868?aid=1011l36n8">Asset Store</a> | <a href="http://www.tripolygon.com">Website</a> | <a href="https://cafe.naver.com/tripolygon/31">한글 메뉴얼</a><div class="line-block">
+<a href="https://assetstore.unity.com/packages/tools/modeling/umodeler-80868">Asset Store</a> | <a href="http://www.tripolygon.com">Website</a> | <a href="https://cafe.naver.com/tripolygon/31">한글 메뉴얼</a><div class="line-block">
 <div class="line"><br /></div>
 </div>
 <p>Welcome to the UModeler Manual!</p>
