--- a/releasenotes_UModeler_2020.html
+++ b/releasenotes_UModeler_2020.html
@@ -213,6 +213,7 @@
 <li><p>Fixed the menu type setting like Icon/Text based menu not being restored in some cases.</p></li>
 <li><p>Fixed the Move Snap Size in Settings window not being resotred.</p></li>
 <li><p>Fixed UModeler object jumps with World Grid Snap enabled when the parent object is transformed.</p></li>
+<li><p>Fixed Unity gizmo disappearing in Object mode when being undone.</p></li>
 <li><p>Fixed creating a broken box when Scale in Trasnform component isn’t (1,1,1)</p></li>
 <li><p>Fixed a lag and rapid memory growth issue caused by redundant RefreshAll calling when a parent UModeler object with many child UModeler objects gets selected.</p></li>
 <li><p>Fixed an issue where a dirty flag is marked just when UModeler object being selected and it caused redundant source control diffs.</p></li>
