--- a/releasenotes_UModeler_2020.html
+++ b/releasenotes_UModeler_2020.html
@@ -228,7 +228,7 @@
 <li><p>Fix : Fixed a stack overflow issue happening at the beginning of UModeler.</p></li>
 <li><p>Enhancement : Eraser Tool - Supports removing an edge shared by two triangles which are not coplanar.</p></li>
 <li><p>Enhancement : The edge mode of the Bridge Tool - Preserves UVs and Smoothing groups after bridging two edges.</p></li>
-<li><p>Enhancement : The polygon mode of the Bridge Tool -</p></li>
+<li><p>Enhancement : The polygon mode of the Bridge Tool - Improved briding the two facing polygons.</p></li>
 <li><p>Enhancement : Improved the editable mesh architecture to increase the editing performance.</p></li>
 </ul>
 </div>
