--- a/MiscGroup/LocalSettingsTool.html
+++ b/MiscGroup/LocalSettingsTool.html
@@ -201,7 +201,7 @@ Usually this property is on because most meshes are just for rendering at runtim
 </dd>
 <dt>Generate UV2 channel for Lightmap</dt><dd><p>Generate UVs for lightmaps. From 2.6.9 UVs for lightmap aren’t created automatically. If you want to generate lightmap UVs of all UModeler meshs in a scene, click on <code class="docutils literal notranslate"><span class="pre">Tools</span> <span class="pre">&gt;</span> <span class="pre">UModeler</span> <span class="pre">&gt;</span> <span class="pre">Refresh</span> <span class="pre">All</span></code>.</p>
 </dd>
-<dt>Covnerts To Byte Stream Data</dt><dd><p>This button converts the data format of the selected UModeler meshes into Byte Stream Data format. The byte stream data format reduces the size of .unity and .prefab files, decreases delays when entering and exiting game mode, and reduces file diff. The Diff refers to the difference between the previous and current version of a file.</p>
+<dt>Covnerts To Byte Stream Data</dt><dd><p>This button converts the data format of the selected UModeler meshes into Byte Stream Data format. The byte stream data format reduces the size of .unity and .prefab files, decreases delays when saving/loading a scene and entering/exiting game mode, and reduces file diff. The Diff refers to the difference between the previous and current version of a file.</p>
 <p>And this button is displayed only when a UModeler object whose format is not a byte stream is selected.</p>
 </dd>
 </dl>
