--- a/settings.html
+++ b/settings.html
@@ -301,7 +301,7 @@
 <dt>Keep System Toolbar on always</dt><dd><p>When this is on, the toolbar at the top of the scene view is visible all the time.</p>
 </dd>
 <dt>Create UModeler as Byte Stream Data.</dt><dd><p>This toggle is a function added from UModeler 2.7.26. Newly created UModeler mesh data is saved as a byte stream format.</p>
-<p>The advantage of using Byte Stream Data is that the size of the .unity and .prefab files is reduced first, and the performance increases when entering or exiting game mode in a scene with many UModeler prefabs.</p>
+<p>The advantage of using Byte Stream Data is that the size of the .unity and .prefab files is reduced first, and the performance increases when loading/saving a scene and entering/exiting game mode in a scene with many UModeler prefabs.</p>
 <p>And finally, the diff of .unity and .prefab files is reduced. Diff is the difference between the previous version of the file and the current version when saving a file on the source control.</p>
 </dd>
 </dl>
