Updated the release note.

--- a/releasenotes_UModeler_2020.html
+++ b/releasenotes_UModeler_2020.html
@@ -231,10 +231,12 @@
 <li><p>Fix : Fixed an issue where UV2 for lightmap wasn’t generated due to the invalid default UV2 param in <code class="docutils literal notranslate"><span class="pre">Preference</span></code>.</p></li>
 <li><p>Fix : Fixed unwarpped UV disappearing, after being mirrored using the <code class="docutils literal notranslate"><span class="pre">Mirror</span> <span class="pre">Tool</span></code>.</p></li>
 <li><p>Fix : Fixed unwrapped UV disappearing, after Remove Doubles being applied and Undoing or Duplication by <code class="docutils literal notranslate"><span class="pre">Ctrl+D</span></code></p></li>
+<li><p>Fix : Fixed loop slict tool bug where some polygons or loop edges disappeared.</p></li>
 <li><p>Enhancement : <code class="docutils literal notranslate"><span class="pre">Export</span> <span class="pre">Tool</span></code> - Supports exporting Multiple UModeler Objects to one .obj file.</p></li>
 <li><p>Enhancement : Supports the <code class="docutils literal notranslate"><span class="pre">Byte</span> <span class="pre">Stream</span> <span class="pre">Mesh</span></code> to reduce the .unity file size and file diff, and improves the performance of saving/loading a scene and switching between Play and Edit mode.</p></li>
 <li><p>Enhancement : <code class="docutils literal notranslate"><span class="pre">Eraser</span> <span class="pre">Tool</span></code> - Vertex deletion connects two adjacent vertices. It removed the polygon which contains the vertex before.</p></li>
 <li><p>Enhancement : The <code class="docutils literal notranslate"><span class="pre">Rect</span> <span class="pre">Gizmo</span></code> in the UV Editor supports the proportionate scaling holding <code class="docutils literal notranslate"><span class="pre">SHIFT</span></code>.</p></li>
+<li><p>Enhancement : <code class="docutils literal notranslate"><span class="pre">Pinch</span></code> property in <code class="docutils literal notranslate"><span class="pre">Loop</span> <span class="pre">Slice</span></code> tool has been added.</p></li>
 <li><p>Feature : Added <code class="docutils literal notranslate"><span class="pre">Mirror</span> <span class="pre">Object</span> <span class="pre">Tool</span></code> which duplicates and mirrors the selected UModeler Object.</p></li>
 </ul>
 </div>
