Updated the release note

--- a/releasenotes_UModeler_2020.html
+++ b/releasenotes_UModeler_2020.html
@@ -231,7 +231,7 @@
 <li><p>Fix : Fixed an issue where UV2 for lightmap wasn’t generated due to the invalid default UV2 param in <code class="docutils literal notranslate"><span class="pre">Preference</span></code>.</p></li>
 <li><p>Fix : Fixed unwarpped UV disappearing, after being mirrored using the <code class="docutils literal notranslate"><span class="pre">Mirror</span> <span class="pre">Tool</span></code>.</p></li>
 <li><p>Fix : Fixed unwrapped UV disappearing, after Remove Doubles being applied and Undoing or Duplication by <code class="docutils literal notranslate"><span class="pre">Ctrl+D</span></code></p></li>
-<li><p>Fix : Fixed loop slict tool bug where some polygons or loop edges disappeared.</p></li>
+<li><p>Fix : Fixed <code class="docutils literal notranslate"><span class="pre">Loop</span> <span class="pre">Slice</span></code> tool bug where some polygons or loop edges disappeared.</p></li>
 <li><p>Enhancement : <code class="docutils literal notranslate"><span class="pre">Export</span> <span class="pre">Tool</span></code> - Supports exporting Multiple UModeler Objects to one .obj file.</p></li>
 <li><p>Enhancement : Supports the <code class="docutils literal notranslate"><span class="pre">Byte</span> <span class="pre">Stream</span> <span class="pre">Mesh</span></code> to reduce the .unity file size and file diff, and improves the performance of saving/loading a scene and switching between Play and Edit mode.</p></li>
 <li><p>Enhancement : <code class="docutils literal notranslate"><span class="pre">Eraser</span> <span class="pre">Tool</span></code> - Vertex deletion connects two adjacent vertices. It removed the polygon which contains the vertex before.</p></li>
