--- a/UVEditor/overview.html
+++ b/UVEditor/overview.html
@@ -263,12 +263,15 @@
 <td><p>Separate Transform</p></td>
 </tr>
 <tr class="row-even"><td><p>Holding <code class="docutils literal notranslate"><span class="pre">CTRL</span></code></p></td>
-<td><p>Continuous Selection</p></td>
+<td><p>Subtracts selection</p></td>
 </tr>
-<tr class="row-odd"><td><p>Holding <code class="docutils literal notranslate"><span class="pre">Alt</span></code> or <code class="docutils literal notranslate"><span class="pre">Cmd</span></code></p></td>
+<tr class="row-odd"><td><p>Holding <code class="docutils literal notranslate"><span class="pre">SHIFT</span></code></p></td>
+<td><p>Adds selection</p></td>
+</tr>
+<tr class="row-even"><td><p>Holding <code class="docutils literal notranslate"><span class="pre">Alt</span></code> or <code class="docutils literal notranslate"><span class="pre">Cmd</span></code></p></td>
 <td><p>Camera panning</p></td>
 </tr>
-<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">F</span></code></p></td>
+<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">F</span></code></p></td>
 <td><p>Focuses on the selected elements</p></td>
 </tr>
 </tbody>
