--- a/releasenotes_UModeler_2020.html
+++ b/releasenotes_UModeler_2020.html
@@ -230,7 +230,7 @@
 <li><p>Fix : Fixed UVs in UV Editor after UModeler objects are combined using Combine Tool.</p></li>
 <li><p>Fix : Fixed incorrect texts in Preference window and Tooltip in the Polygon Color tool.</p></li>
 <li><p>Fix : Fixed <code class="docutils literal notranslate"><span class="pre">CTRL</span></code> and <code class="docutils literal notranslate"><span class="pre">SHIFT</span></code> key behaviours in UV elements selection. Holding CTRL excludes the existing selection. Holding SHIFT adds the new selections.</p></li>
-<li><p>Feature : Added <code class="docutils literal notranslate"><span class="pre">Diagnosis</span> <span class="pre">All</span> <span class="pre">UModeler</span> <span class="pre">Objects</span></code> menu item.</p></li>
+<li><p>Feature : Added <code class="docutils literal notranslate"><span class="pre">Diagnose</span> <span class="pre">All</span> <span class="pre">UModeler</span> <span class="pre">Objects</span></code> menu item.</p></li>
 <li><p>Feature : Added <code class="docutils literal notranslate"><span class="pre">Repair</span> <span class="pre">All</span> <span class="pre">Corrupt</span> <span class="pre">UModeler</span> <span class="pre">Objects</span></code> menu item.</p></li>
 </ul>
 </div>
