Upated the release note 2021

--- a/releasenotes_UModeler_2021.html
+++ b/releasenotes_UModeler_2021.html
@@ -191,11 +191,11 @@
 <img alt="_images/TurtleShip.png" src="_images/TurtleShip.png" />
 </div>
 <ul class="simple">
-<li><p>Assets : Includes the <code class="docutils literal notranslate"><span class="pre">Turtle</span> <span class="pre">Ship</span></code> demo pack.</p></li>
-<li><p>Enhancement : The existing custom Move, Rotate and Scale gizmos have been replaced with the Unity handlers.</p></li>
+<li><p>Assets : Includes the Turtle Ship demo pack.</p></li>
+<li><p>Enhancement : The existing Move, Rotate and Scale gizmos have been replaced with the Unity Move, Rotate and Scale Handles.</p></li>
 <li><p>Enhancement : Length of every selected edge has been displayed when Local Overlay is on.</p></li>
 <li><p>Enhancement : Length of every edge consisting of the selected faces has been displayed when Local Overlay is on.</p></li>
-<li><p>Enhancement : Arc’s overlay info has changed.</p></li>
+<li><p>Enhancement : Arc’s overlay info has be upgraded.</p></li>
 </ul>
 </div>
 <div class="section" id="version-2-8-0f1-jan-14-2021">
