--- a/releasenotes_UModeler_2021.html
+++ b/releasenotes_UModeler_2021.html
@@ -195,7 +195,7 @@
 <li><p>Enhancement : The existing Move, Rotate and Scale gizmos have been replaced with the Unity Move, Rotate and Scale Handles.</p></li>
 <li><p>Enhancement : Length of every selected edge has been displayed when <code class="docutils literal notranslate"><span class="pre">Local</span> <span class="pre">Overlay</span></code> is on.</p></li>
 <li><p>Enhancement : Length of every edge consisting of the selected faces has been displayed when <code class="docutils literal notranslate"><span class="pre">Local</span> <span class="pre">Overlay</span></code> is on.</p></li>
-<li><p>Enhancement : Arc’s overlay info has be upgraded.</p></li>
+<li><p>Enhancement : <code class="docutils literal notranslate"><span class="pre">Arc</span> <span class="pre">tool</span></code>’s overlay info has be upgraded.</p></li>
 </ul>
 </div>
 <div class="section" id="version-2-8-0f1-jan-14-2021">
