Updated the manual

--- a/MiscGroup/LocalSettingsTool.html
+++ b/MiscGroup/LocalSettingsTool.html
@@ -215,6 +215,8 @@
 </dd>
 <dt>Lightmap Static</dt><dd><p>Changes the lighting way to lightmap. This variable is interlocked with <code class="docutils literal notranslate"><span class="pre">Lightmap</span> <span class="pre">Static</span></code> in <code class="docutils literal notranslate"><span class="pre">Lighting</span></code> window.</p>
 </dd>
+<dt>Invisible In PlayMode.</dt><dd><p>If on, a mesh is invisible in Play Mode and it is displayed in transparent color in Editor mode. This will be very useful if you want to use UModeler mesh as a trigger or a collider.</p>
+</dd>
 </dl>
 <dl id="recalculate-tangents">
 <dt>Recalculate Tangents</dt><dd><p>If this is on, tangent vectors will be calculated every time UModeler mesh changes. If the materials in UModeler have normal textures, this should be on.</p>
