--- a/UModelerLite.html
+++ b/UModelerLite.html
@@ -275,25 +275,28 @@
 <tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">CTRL</span> <span class="pre">+</span> <span class="pre">Y</span></code></p></td>
 <td><p>Redo</p></td>
 </tr>
-<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">W</span></code></p></td>
+<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">Q</span></code></p></td>
+<td><p>Hand Tool</p></td>
+</tr>
+<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">W</span></code></p></td>
 <td><p>Translation Gizmo</p></td>
 </tr>
-<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">E</span></code></p></td>
+<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">E</span></code></p></td>
 <td><p>Rotation Gizmo</p></td>
 </tr>
-<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">R</span></code></p></td>
+<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">R</span></code></p></td>
 <td><p>Scale Gizmo</p></td>
 </tr>
-<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">LMB</span></code></p></td>
+<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">LMB</span></code></p></td>
 <td><p>Selects or moves several elements.</p></td>
 </tr>
-<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">LMB</span> <span class="pre">Drag</span></code></p></td>
+<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">LMB</span> <span class="pre">Drag</span></code></p></td>
 <td><p>Selects or moves several elements.</p></td>
 </tr>
-<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">SHIFT</span> <span class="pre">+</span> <span class="pre">LMB</span></code> or <code class="docutils literal notranslate"><span class="pre">LMB</span> <span class="pre">Drag</span></code></p></td>
+<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">SHIFT</span> <span class="pre">+</span> <span class="pre">LMB</span></code> or <code class="docutils literal notranslate"><span class="pre">LMB</span> <span class="pre">Drag</span></code></p></td>
 <td><p>Special action depending on the current tool</p></td>
 </tr>
-<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">CTRL</span> <span class="pre">+</span> <span class="pre">LMB</span></code> or <code class="docutils literal notranslate"><span class="pre">LMB</span> <span class="pre">Drag</span></code></p></td>
+<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">CTRL</span> <span class="pre">+</span> <span class="pre">LMB</span></code> or <code class="docutils literal notranslate"><span class="pre">LMB</span> <span class="pre">Drag</span></code></p></td>
 <td><p>Special action depending on the current tool</p></td>
 </tr>
 </tbody>
