--- a/UModelerLite.html
+++ b/UModelerLite.html
@@ -390,7 +390,7 @@ Now you are ready to make a fantastic world with <code class="docutils literal n
 <a class="reference internal image-reference" href="_images/UModelerLite_GettingStarted4.png"><img alt="_images/UModelerLite_GettingStarted4.png" src="_images/UModelerLite_GettingStarted4.png" style="width: 672.0px; height: 378.0px;" /></a>
 </div>
 <hr class="docutils" />
-<p>We have tutorial videos so that you can get used to UModeler Lite quickly.</p>
+<p>We have tutorial videos so that you can get used to UModeler Lite quickly. Click below to watch them.</p>
 <a href="https://www.youtube.com/playlist?list=PLKfydgNGUTp2QAoE_eizEv3gF5TLoSVYk" target="_blank">Tutorial Videos</a></div>
 <hr class="docutils" />
 <div class="section" id="artworks-made-with-umodeler-lite">
