--- a/overview.html
+++ b/overview.html
@@ -215,7 +215,7 @@
 <dl>
 <dt>Header</dt><dd><div class="line-block">
 <div class="line"><code class="docutils literal notranslate"><span class="pre">UModeler</span> <span class="pre">Ver</span> <span class="pre">2.xx</span></code> - Opens the About dialog box.</div>
-<div class="line"><code class="docutils literal notranslate"><span class="pre">Close</span></code> - Disables UModeler to make the current UModeler object behave and visulized same as the general obejct. It can be enabled again by clicking on Open button which is shown up during the disable status.</div>
+<div class="line"><code class="docutils literal notranslate"><span class="pre">Close</span></code> - Disables UModeler to make the current UModeler object behave and look the same as the general object. It can be enabled again by clicking on Open button which is shown up during the disable status.</div>
 <div class="line"><code class="docutils literal notranslate"><span class="pre">?</span></code> - Opens the online manual describing what the current tool is and how to use it.</div>
 <div class="line"><code class="docutils literal notranslate"><span class="pre">Search</span> <span class="pre">EditBox</span></code> - Searches for a specific tool. This edit box can be activated by pressing ENTER in the scene view.</div>
 </div>
