--- a/PrimitiveShapesGroup/index.html
+++ b/PrimitiveShapesGroup/index.html
@@ -185,7 +185,7 @@
 <p class="admonition-title">Tip</p>
 <ol class="arabic simple">
 <li><p>Pressing <code class="docutils literal notranslate"><span class="pre">SPACE</span></code> confirms the current action. On the other hand <code class="docutils literal notranslate"><span class="pre">ESC</span></code> cancels it.</p></li>
-<li><p>You can adjust a shape by chaning the properties before confirming.</p></li>
+<li><p>You can adjust a shape by changing the properties before confirming.</p></li>
 <li><p>The mouse cursor will be snapped to a vertex, a center of edge, a center of polygon etc when the cursor gets close enough to them.</p></li>
 <li><p><code class="docutils literal notranslate"><span class="pre">Glue</span></code> and <code class="docutils literal notranslate"><span class="pre">Border</span> <span class="pre">Check</span></code> Properties are common in the most primitive shape tools. See the demo of <code class="docutils literal notranslate"><span class="pre">Box</span> <span class="pre">Tool</span></code> to find out how they work.</p></li>
 </ol>
