Updated the release note

--- a/releasenotes_UModeler_2021.html
+++ b/releasenotes_UModeler_2021.html
@@ -205,8 +205,9 @@
 <li><p>Assets : Includes The Urban Buildings demo pack to showcase Hotspot Texturing feature.</p></li>
 <li><p>Feature : Added the Hotspot Texturing.</p></li>
 <li><p>Fix : Fixed z-fighting issue of a face overlay in ISO mode.</p></li>
+<li><p>Fix : Fixed a bug where a duplicated polygon moves along with the original polygon when it’s unwrapped and duplicated.</p></li>
 <li><p>Enhancement : Implemented Picking Vertex Color. Pick Color button has been added in the Vertex Color tool and the Polygon color tool.</p></li>
-<li><p>Fix : Fixed the duplicate tool bug where a polygon popped up or disappeared.</p></li>
+<li><p>Enhancement : Modified the scale gizmo behaviour so that it is snapped to (0,0,0) and it can’t have minus scale values.</p></li>
 </ul>
 </div>
 <div class="section" id="version-2-8-3-april-12-2021">
