Updated the release note

--- a/releasenotes_UModeler_2021.html
+++ b/releasenotes_UModeler_2021.html
@@ -213,6 +213,7 @@
 <li><p>Fix : Changed the lightmap UV2 coordinates to be updated every time the umodeler is modified.</p></li>
 <li><p>Fix : The minimum values ​​of <code class="docutils literal notranslate"><span class="pre">Width</span></code> and <code class="docutils literal notranslate"><span class="pre">Depth</span></code> of the <code class="docutils literal notranslate"><span class="pre">Rectangle</span> <span class="pre">Tool</span></code> and the <code class="docutils literal notranslate"><span class="pre">Box</span> <span class="pre">Tool</span></code> have been changed from 0.01 to 0.001.</p></li>
 <li><p>Fix : Increased the overlay size of <code class="docutils literal notranslate"><span class="pre">Vertex</span> <span class="pre">tool</span></code> and <code class="docutils literal notranslate"><span class="pre">Rectctangle</span> <span class="pre">Selection</span> <span class="pre">tool</span></code> in <code class="docutils literal notranslate"><span class="pre">UV</span> <span class="pre">Editor</span></code>.</p></li>
+<li><p>Fix : Fixed a bug where V Snapping to other objects didn’t work in 2020.3 and newer versions.</p></li>
 </ul>
 </div>
 <div class="section" id="version-2-8-3f3-april-30-2021">
