Updated the release note

--- a/releasenotes_UModeler_2021.html
+++ b/releasenotes_UModeler_2021.html
@@ -205,7 +205,7 @@
 </div>
 <ul class="simple">
 <li><p>Assets : Includes <code class="docutils literal notranslate"><span class="pre">Blacksmith</span></code> demo pack.</p></li>
-<li><p>Enhancement : Added The Pixl snap to <code class="docutils literal notranslate"><span class="pre">UV</span> <span class="pre">Editor</span></code>.</p></li>
+<li><p>Enhancement : Added The Pixel snap to <code class="docutils literal notranslate"><span class="pre">UV</span> <span class="pre">Editor</span></code>.</p></li>
 <li><p>Enhancement : V snap - If you drag the XYZ axis and snap to another point holding <code class="docutils literal notranslate"><span class="pre">V</span> <span class="pre">key</span></code>, only the dragged axis coordinate will be aligned with that point. Namely <code class="docutils literal notranslate"><span class="pre">1D</span> <span class="pre">snapping</span></code> has been restored.</p></li>
 <li><p>Enhancement : Added <code class="docutils literal notranslate"><span class="pre">Menu</span> <span class="pre">&gt;</span> <span class="pre">Tools</span> <span class="pre">&gt;</span> <span class="pre">UModeler</span> <span class="pre">&gt;</span> <span class="pre">Export</span> <span class="pre">as</span> <span class="pre">.Obj</span></code> menu. Using this menu, you can export UModeler objects to an OBJ file even when multiple objects are selected at once and an object without UModeler is selected.</p></li>
 <li><p>Fix : Fixed a bug where snaps were applied twice when moving edges or polygons in the world grid.</p></li>
