Updated the release note

--- a/releasenotes_UModeler_2021.html
+++ b/releasenotes_UModeler_2021.html
@@ -209,8 +209,8 @@
 <ul class="simple">
 <li><p>Assets : Includes new <code class="docutils literal notranslate"><span class="pre">Ancient</span> <span class="pre">Dungeon</span></code> demo pack for 2.8.5 users</p></li>
 <li><p>Enhancement : Added <code class="docutils literal notranslate"><span class="pre">Grow</span> <span class="pre">Select</span></code> tool in <code class="docutils literal notranslate"><span class="pre">Selection</span></code> group of UV Editor.</p></li>
-<li><p>Enhancement : Added <code class="docutils literal notranslate"><span class="pre">Rect</span> <span class="pre">Select</span> <span class="pre">Mode</span></code> for Edge and Polygon selection. <code class="docutils literal notranslate"><span class="pre">Intersect</span></code> and <code class="docutils literal notranslate"><span class="pre">Complete</span></code> modes are available.</p></li>
-<li><p>Enhancement : Increased gizmos’ size in UV Editor.</p></li>
+<li><p>Enhancement : Added <code class="docutils literal notranslate"><span class="pre">Rect</span> <span class="pre">Select</span> <span class="pre">Mode</span></code> for Edge and Polygon selection. <code class="docutils literal notranslate"><span class="pre">Intersect</span></code> and <code class="docutils literal notranslate"><span class="pre">Complete</span></code> modes are available. The default shortkey is <code class="docutils literal notranslate"><span class="pre">CTRL+SHIFT+W</span></code>.</p></li>
+<li><p>Enhancement : Increased gizmos’ size in UV Editor entirely.</p></li>
 </ul>
 </div>
 <div class="section" id="version-2-8-5-june-17-2021">
