--- a/HotspotTexturing.html
+++ b/HotspotTexturing.html
@@ -199,7 +199,7 @@ you define UV layouts using the hotspot layout editor, UVs of each polygon can b
 <ul class="simple">
 <li><p>Built-in <code class="docutils literal notranslate"><span class="pre">Hotspot</span> <span class="pre">Layout</span> <span class="pre">Editor</span></code> made from the UV Editor framework.</p></li>
 <li><p>A triangle layout as well as a rectangle is supported</p></li>
-<li><p>Auto mode called <code class="docutils literal notranslate"><span class="pre">Auto</span> <span class="pre">Hotpost</span></code> which enables UVs to be applied automatically every time a polygon is modified.</p></li>
+<li><p>Auto mode called <code class="docutils literal notranslate"><span class="pre">Auto</span> <span class="pre">Hotspot</span></code> which enables UVs to be applied automatically every time a polygon is modified.</p></li>
 <li><p><code class="docutils literal notranslate"><span class="pre">Padding</span></code> parameter to gives consistant gap between a hotspot layout and assigned UVs</p></li>
 <li><p>Applies a selected hotspot layout to UVs by clicking on <code class="docutils literal notranslate"><span class="pre">Apply</span> <span class="pre">Selected</span> <span class="pre">Hotspot</span></code> button.</p></li>
 </ul>
@@ -219,7 +219,7 @@ you define UV layouts using the hotspot layout editor, UVs of each polygon can b
 <dl>
 <dt>1.Select Only Visible</dt><dd><p>If on, only visible polygons can be selected in the scene view.</p>
 </dd>
-<dt>2.Auto Hotspot</dt><dd><p>If on, hotspot texturing is applied to every polygon whose is involved in being edited at realtime.</p>
+<dt>2.Auto Hotspot</dt><dd><p>If on, hotspot texturing is applied immediately to every polygon which is being edited at realtime.</p>
 </dd>
 <dt>3.Hotspot Group</dt><dd><p>If on, adjacent polygons are placed in one layout.</p>
 </dd>
@@ -254,7 +254,7 @@ you define UV layouts using the hotspot layout editor, UVs of each polygon can b
 <dt>7.New Hotspot Layout/Open Layout Editor</dt><dd><p>If a hotspot layout file isn’t set, <code class="docutils literal notranslate"><span class="pre">New</span> <span class="pre">Hotspot</span> <span class="pre">Layout</span></code> button is enabled so that you can create a new layout file.
 If a hotspot layout file is set, <code class="docutils literal notranslate"><span class="pre">UV</span> <span class="pre">Layout</span> <span class="pre">Editor</span></code> will be opened.</p>
 </dd>
-<dt>8.Apply Hotspot</dt><dd><p>If enabled, the hotspot texturing will be applied to the selected polygons. The selected polygons’ UV coordinates will be place in the most appropriate layout.</p>
+<dt>8.Apply Hotspot</dt><dd><p>If enabled, the hotspot texturing will be applied to the selected polygons. The selected polygons’ UV coordinates will be placed in the most appropriate layout.</p>
 </dd>
 <dt>9.Apply Selected Hotspot</dt><dd><p>If enabled, the selected polygons’ UV coordinates will be placed in the selected hotspot layout.</p>
 </dd>
@@ -316,7 +316,7 @@ If a hotspot layout file is set, <code class="docutils literal notranslate"><spa
 <li><p>At first you should select a UModeler mesh or create it.</p></li>
 <li><p>Enter <code class="docutils literal notranslate"><span class="pre">Hotspot</span> <span class="pre">Layout</span></code> tool</p></li>
 <li><p>You should create a new Hotspot layout file by pressing <code class="docutils literal notranslate"><span class="pre">New</span> <span class="pre">Hotspot</span> <span class="pre">Layout</span></code> or open the existing layout file via <code class="docutils literal notranslate"><span class="pre">Hotspot</span> <span class="pre">Layout</span></code> slot.</p></li>
-<li><p>Now click on <code class="docutils literal notranslate"><span class="pre">Open</span> <span class="pre">Layout</span> <span class="pre">Editor</span></code> to opens the Layout Editor</p></li>
+<li><p>Now click on <code class="docutils literal notranslate"><span class="pre">Open</span> <span class="pre">Layout</span> <span class="pre">Editor</span></code> to open the Layout Editor</p></li>
 </ol>
 <div class="figure align-default" id="id6">
 <a class="reference internal image-reference" href="_images/hotspotlayout_editor_autohotspot_0.png"><img alt="_images/hotspotlayout_editor_autohotspot_0.png" src="_images/hotspotlayout_editor_autohotspot_0.png" style="width: 631.0px; height: 520.0px;" /></a>
