--- a/releasenotes_UModeler_2021.html
+++ b/releasenotes_UModeler_2021.html
@@ -216,19 +216,19 @@
 <ul class="simple">
 <li><p>Asset : Includes the Medieval Weapons - Swords and Shields Pack for 2.8.7 users.</p></li>
 <li><p>Asset : Includes Hamster Knight character pack for 2.8.7 users</p></li>
-<li><p>Fix : Fixed a bug where Invisible in Playmode toggle removes any secondary materials from the object and causes “Submesh Index Out of Bounds” errors.</p></li>
-<li><p>Fix : Fixed a material tool issue where It is possible to remove all material slots, which then throws ArgumentOutOfRangeExceptions and breaks the Inspector window if the GameObject is de-selected and re-selected</p></li>
-<li><p>Fix : Fixed an issue where the gizmos’ size of UV Editor is too large and not adpative according to the UV editor size.</p></li>
-<li><p>Fix : Fixed a stack overflow issue where a mesh object is umodelerized using UModelerize Hierarchically.</p></li>
-<li><p>Fix : Fixed an issue where Shift was displayed in view commentary in Extrusion mode even when the extrude modifier key changed to Caps Lock in the Preference.</p></li>
-<li><p>Fix : Fixed a Multi-PushPull tool bug where Selecting ‘One Step Push’ or ‘One Step Pull’ without an active polygon selected throws NullReferenceExceptions</p></li>
-<li><p>Fix : Fixed a Mirror Object tool bug where MissingReferenceExceptions are thrown when repainting the scene view(moving the mouse around) after undoing a Mirror Object action</p></li>
-<li><p>Fix : Fixed a Clone tool bug where Dragging on a polygon with the left mouse button only slightly and then clicking on an empty space in the Scene view throws an unhandled NullReferenceException</p></li>
-<li><p>Fix : Fixed a Clip tool bug where Unhandled NullReferenceException in certain scenarios</p></li>
-<li><p>Fix : Fixed a Polygon group tool bug where Remove Polygons button without a polygon selected throws a NullReferenceException</p></li>
+<li><p>Fix : Fixed a bug where <code class="docutils literal notranslate"><span class="pre">Invisible</span> <span class="pre">in</span> <span class="pre">Playmode</span></code> toggle removes any secondary materials from the object and causes <code class="docutils literal notranslate"><span class="pre">Submesh</span> <span class="pre">Index</span> <span class="pre">Out</span> <span class="pre">of</span> <span class="pre">Bounds</span></code> errors.</p></li>
+<li><p>Fix : Fixed a <code class="docutils literal notranslate"><span class="pre">Material</span> <span class="pre">Tool</span></code> issue where it is possible to remove all material slots, which then throws ArgumentOutOfRangeExceptions and breaks the Inspector window if the GameObject is de-selected and re-selected</p></li>
+<li><p>Fix : Fixed an issue where the gizmos’ size of <code class="docutils literal notranslate"><span class="pre">UV</span> <span class="pre">Editor</span></code> is too large and not adpative according to the UV editor size.</p></li>
+<li><p>Fix : Fixed a stack overflow issue where a mesh object is umodelerized using <code class="docutils literal notranslate"><span class="pre">UModelerize</span> <span class="pre">Hierarchically</span></code>.</p></li>
+<li><p>Fix : Fixed an issue where Shift was displayed in view commentary in <code class="docutils literal notranslate"><span class="pre">Extrusion</span> <span class="pre">mode</span></code> even when the extrude modifier key changed to Caps Lock in the Preference.</p></li>
+<li><p>Fix : Fixed a <code class="docutils literal notranslate"><span class="pre">Multi-PushPull</span> <span class="pre">Tool</span></code> bug where Selecting <code class="docutils literal notranslate"><span class="pre">One</span> <span class="pre">Step</span> <span class="pre">Pull</span></code> without an active polygon selected throws NullReferenceExceptions</p></li>
+<li><p>Fix : Fixed a <code class="docutils literal notranslate"><span class="pre">Mirror</span> <span class="pre">Object</span> <span class="pre">Tool</span></code> bug where MissingReferenceExceptions are thrown when repainting the scene view(moving the mouse around) after undoing a Mirror Object action</p></li>
+<li><p>Fix : Fixed a <code class="docutils literal notranslate"><span class="pre">Clone</span> <span class="pre">Tool</span></code> bug where Dragging on a polygon with the left mouse button only slightly and then clicking on an empty space in the Scene view throws an unhandled NullReferenceException</p></li>
+<li><p>Fix : Fixed a <code class="docutils literal notranslate"><span class="pre">Clip</span> <span class="pre">Tool</span></code> bug where Unhandled NullReferenceException in certain scenarios</p></li>
+<li><p>Fix : Fixed a <code class="docutils literal notranslate"><span class="pre">Polygon</span> <span class="pre">Group</span> <span class="pre">Tool</span></code> bug where Remove Polygons button without a polygon selected throws a NullReferenceException</p></li>
 <li><p>Fix : Fixed a bug where Shift+LMB on the selected menu button doesn’t work to bringing up a online manual.</p></li>
-<li><p>Fix : Fixed a Grow Select tool bug of UV editor where Unhandled NullReferenceException is thrown when attempting to grow selection on a single face in the UV Editor</p></li>
-<li><p>Fix : Fixed a bug where warnings about releasing render texture that is set to be RenderTexture.active are thrown upon exporting</p></li>
+<li><p>Fix : Fixed a <code class="docutils literal notranslate"><span class="pre">Grow</span> <span class="pre">Select</span> <span class="pre">Tool</span></code> bug of UV editor where Unhandled NullReferenceException is thrown when attempting to grow selection on a single face in the <code class="docutils literal notranslate"><span class="pre">UV</span> <span class="pre">Editor</span></code></p></li>
+<li><p>Fix : Fixed a <code class="docutils literal notranslate"><span class="pre">Export</span> <span class="pre">Tool</span></code> bug of <code class="docutils literal notranslate"><span class="pre">UV</span> <span class="pre">Editor</span></code> where warnings about releasing render texture that is set to be RenderTexture.active are thrown upon exporting</p></li>
 </ul>
 </div>
 <div class="section" id="version-2-8-7-september-7-2021">
