--- a/releasenotes_UModeler_2021.html
+++ b/releasenotes_UModeler_2021.html
@@ -229,6 +229,7 @@
 <li><p>Fix : Fixed a bug where Shift+LMB on the selected menu button doesn’t work to bringing up a online manual.</p></li>
 <li><p>Fix : Fixed a <code class="docutils literal notranslate"><span class="pre">Grow</span> <span class="pre">Select</span> <span class="pre">Tool</span></code> bug of UV editor where Unhandled NullReferenceException is thrown when attempting to grow selection on a single face in the <code class="docutils literal notranslate"><span class="pre">UV</span> <span class="pre">Editor</span></code></p></li>
 <li><p>Fix : Fixed a <code class="docutils literal notranslate"><span class="pre">Export</span> <span class="pre">Tool</span></code> bug of <code class="docutils literal notranslate"><span class="pre">UV</span> <span class="pre">Editor</span></code> where warnings about releasing render texture that is set to be RenderTexture.active are thrown upon exporting</p></li>
+<li><p>Fix : Fixed shortcut crash of <code class="docutils literal notranslate"><span class="pre">Arc</span> <span class="pre">Tool</span></code> and <code class="docutils literal notranslate"><span class="pre">Duplicate</span> <span class="pre">Tool</span></code> - Arc Tool shortcut changed to <code class="docutils literal notranslate"><span class="pre">Ctrl+Shift+Q</span></code>. Duplicate Tool shortcut changed to <code class="docutils literal notranslate"><span class="pre">Ctrl+Shift+D</span></code>.</p></li>
 </ul>
 </div>
 <div class="section" id="version-2-8-7-september-7-2021">
