--- a/UVEditor/UnwrapGroup/CubeUnwrapTool.html
+++ b/UVEditor/UnwrapGroup/CubeUnwrapTool.html
@@ -205,6 +205,8 @@
 </dd>
 <dt>Spacing</dt><dd><p>The space between UV Islands.</p>
 </dd>
+<dt>Keep Size</dt><dd><p>If true, UV size is propotional to the size of the selected polygon. If false, UV sizes of the selected polygons when being unwrapped are identical.</p>
+</dd>
 <dt>Separate All</dt><dd><p>If on, each polygon will be a UV island. If not, each connected polygon group will be a UV Island.</p>
 </dd>
 <dt>Unwrap</dt><dd><p>Unwrap the selected polygon in 3D Scene view.</p>
