--- a/UVEditor/UnwrapGroup/PlaneUnwrapTool.html
+++ b/UVEditor/UnwrapGroup/PlaneUnwrapTool.html
@@ -207,6 +207,8 @@
 </dd>
 <dt>Separate All</dt><dd><p>If on, each polygon will be a UV island. If not, each connected polygon group will be a UV Island.</p>
 </dd>
+<dt>Keep Size</dt><dd><p>If true, UV size is propotional to the size of the selected polygon. If false, UV sizes of the selected polygons when being unwrapped are identical.</p>
+</dd>
 <dt>Axis</dt><dd><p>Select which axis is used for projection.</p>
 <dl class="simple">
 <dt>Normal</dt><dd><p>The normal direction of the connected polygons.</p>
