Updated material tool

--- a/SurfaceGroup/MaterialTool.html
+++ b/SurfaceGroup/MaterialTool.html
@@ -249,6 +249,10 @@
 </dd>
 <dt>Add Slot</dt><dd><p>Adds a new material slot.</p>
 </dd>
+<dt>Copy Materials</dt><dd><p>Stores materials in the current Object in order to paste them to another object.</p>
+</dd>
+<dt>Paste Materials</dt><dd><p>Pastes the stored materials in the clipboard.</p>
+</dd>
 </dl>
 </div>
 <div class="section" id="uis-of-material-slot">
