메뉴얼 업데이트

--- a/RemoveGroup/CutTool.html
+++ b/RemoveGroup/CutTool.html
@@ -205,6 +205,17 @@
 </dd>
 <dt>Fill Facet</dt><dd><p>Fills facets with polygons.</p>
 </dd>
+<dt>Action After Cut</dt><dd><dl class="simple">
+<dt>Defines an action after cutting.</dt><dd><ul class="simple">
+<li><p><code class="docutils literal notranslate"><span class="pre">None</span></code> - does nothing.</p></li>
+<li><p><code class="docutils literal notranslate"><span class="pre">Select</span> <span class="pre">Polygons</span></code> - selects all polygons above the custom plane.</p></li>
+<li><p><code class="docutils literal notranslate"><span class="pre">Detach</span></code> - separates all polygons above the custom plane to the sepearated object.</p></li>
+</ul>
+</dd>
+</dl>
+</dd>
+<dt>Snap To XY Axis.</dt><dd><p>Cutting plane Snaps to X or Y axis.</p>
+</dd>
 <dt>Select Above</dt><dd><p>After cutting a mesh, selects all polygons above the custom plane.</p>
 </dd>
 </dl>
